# hs_bgw

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.old  version.txt  未命名绘图.drawio
main/: CMakeLists.txt  bgs_ble.c  bgs_ble.h  bgs_ble_utils.c  bgs_ble_utils.h  bgs_main.c  bgs_main.h  bgs_mqtt.c  bgs_mqtt.h  ixe_ble_ota.c  ixe_ble_ota.h  ixe_blufi.c  ixe_blufi.h  ixe_blufi_command.c  ixe_blufi_command.h  ixe_blufi_security.c  ixe_blufi_security.h  ixe_main.h  ixe_ota.c  ixe_params.c  ixe_params.h  mqtt_ca_cert.pem
soc01/: CMakeLists.txt  bgs_socket_cmd.c  bgs_socket_cmd.h  bgs_socket_util.c  bgs_socket_util.h
